flta terminar el crear descuento

--- a/estilos/style1.css
+++ b/estilos/style1.css
@@ -50,6 +50,7 @@
 }
 .btn-primary{ /*fijarse si anda esto de cambiar de color los botones*/
     background-color: violet;
+    border-color: violet;
     
 }
 .btn-primary:hover{ /*fijarse si anda esto de cambiar de color los botones*/
