--- a/estilos/style1.css
+++ b/estilos/style1.css
@@ -65,7 +65,7 @@
     background-color: rgb(164, 88, 236);
 }
 .filtros{
-    margin-left: 35px;
+    margin-left: 20px;
     border: 1px solid rgb(0, 0, 0);
     border-radius: 16px;;
     text-decoration: none;
@@ -94,6 +94,6 @@
 }
 .bot-filtros{
     z-index: 1050; /* Orden de objetos */
-    width: 20px; /* Ancho fijo */
-
+    width: 100px; /* Ancho fijo */
+    opacity: 0,5;
 }
