--- a/estilos/style1.css
+++ b/estilos/style1.css
@@ -53,8 +53,28 @@
     border-color: violet;
         
 }
+.btn-primary{ /*fijarse si anda esto de cambiar de color los botones*/
+    background-color: whitesmoke;
+    color:  rgb(190, 26, 177);
+    border-color: rgb(190, 26, 177);
+    
+}
 .btn-primary:hover{ /*fijarse si anda esto de cambiar de color los botones*/
-    background-color: rgb(236, 86, 236);
+    background-color: rgb(190, 26, 177);
+    color: whitesmoke;
+    border-color: whitesmoke;
+    
+}
+.btn-danger{ /*fijarse si anda esto de cambiar de color los botones*/
+    background-color: whitesmoke;
+    color:  rgb(206, 74, 74);
+    border-color: rgb(207, 34, 34);
+    
+}
+.btn-dange:hover{ /*fijarse si anda esto de cambiar de color los botones*/
+    background-color: rgb(207, 34, 34);
+    color: whitesmoke;
+    border-color: whitesmoke;
     
 }
 
@@ -104,6 +124,10 @@
     background-color: hsl(242, 68%, 90%);
     padding: 10px;
     border-radius: 8px;
+}
+#menuPrincipal:hover{
+    background-color: hsl(242, 77%, 76%);
+
 }
 .titulo{
     font-weight: bold;
