--- a/estilos/style1.css
+++ b/estilos/style1.css
@@ -1,7 +1,17 @@
 
+body{
+    background-color: #fafafa;
+}
+
 .footer{
     align-self:bottom;
 }
+
+
+.carousel{
+
+}
+
 #cliente{
     padding: 4px;
     margin: 4px;
@@ -9,6 +19,10 @@
 #duenoLocal{
     padding: 4px;
     margin: 8px;
+}
+
+.carrusel{
+    max-height: 70vh;
 }
 
 .login-button{
@@ -54,32 +68,33 @@
         
 }
 .btn-primary{ /*fijarse si anda esto de cambiar de color los botones*/
-    background-color: whitesmoke;
-    color:  rgb(190, 26, 177);
-    border-color: rgb(190, 26, 177);
+    background-color: rgb(255, 255, 255);
+    color:  violet;
+    border-color: violet;
+    font-weight: 600;
     
 }
 .btn-primary:hover{ /*fijarse si anda esto de cambiar de color los botones*/
-    background-color: rgb(190, 26, 177);
-    color: whitesmoke;
-    border-color: whitesmoke;
+    background-color: violet;
+    color: rgb(255, 255, 255);
+    border-color: rgb(255, 255, 255);
     
 }
 .btn-danger{ /*fijarse si anda esto de cambiar de color los botones*/
-    background-color: whitesmoke;
+    background-color: rgb(255, 255, 255);
     color:  rgb(206, 74, 74);
     border-color: rgb(207, 34, 34);
     
 }
 .btn-dange:hover{ /*fijarse si anda esto de cambiar de color los botones*/
     background-color: rgb(207, 34, 34);
-    color: whitesmoke;
-    border-color: whitesmoke;
+    color: rgb(255, 255, 255);
+    border-color: rgb(255, 255, 255);
     
 }
 
 .a{
-    border-color:#26014be1
+    border-color:violet;
 }
 .rosa{
     background-color: rgb(164, 88, 236);
