--- a/estilos/style1.css
+++ b/estilos/style1.css
@@ -134,13 +134,17 @@ body{
     padding-bottom: 15px;
     background-color: rgb(224, 198, 224);
 
-    
-
+}
+.bot-crear {
+    margin-left: 20px;
+    padding-left: 20px; 
+    text-decoration: none; 
+    margin-bottom: 10px; 
 }
 .listado{
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: space-around;
     height: fit-content;
     
 }
