--- a/estilos/style1.css
+++ b/estilos/style1.css
@@ -238,3 +238,18 @@ li a.migasDePan:hover{
 li.active a.migasDePan{
     text-decoration: underline;
 }
+.carousel{
+    width: 90%;
+    max-width: 1200px;
+    background-color: rgb(224, 201, 246);
+    
+}
+
+.bienvenida{
+    font-size: 2.5rem;
+    font-weight: bold;
+    color: hsl(242, 68%, 40%);
+    text-align: center;
+    margin: 20px 0;
+    text-shadow: 2px 2px hsl(242, 68%, 90%);
+}
